objects/LLC_BI__Field_Map__c.object
<CustomObject>
    <description>The Field Map Object is used to specify fields from one object and populate another. it helps mitigate data re-entry. This object allows the user to create the link (&quot;map&quot;) from one field to another</description>
    <fields>
        <fullName>LLC_BI__Conditional_Mapping_Criteria__c</fullName>
        <description>Administrators manually populate this optional field with a conditional formula. The system evaluates the formula to determine if data mapping is required. By default, this field is blank.</description>
        <label>Conditional Mapping Criteria</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Default_Value__c</fullName>
        <description>The system administrator populates this text field to specify the default value to set on the Target Object Field when the Source Object Field has a blank value. By default, this field is blank.</description>
        <inlineHelpText>This field displays the default value the system sets a Target Object field to if the field is blank.</inlineHelpText>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system administrator populates this checkbox field to indicate that the data service must provide the defined field from the source object when mapping. By default, this field is deselected.</description>
        <inlineHelpText>Select this option to ensure the given field is provided from the source object.</inlineHelpText>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Order__c</fullName>
        <description>The administrator manually populates this optional number field to define the sequence of mappings. By default, it is blank.</description>
        <inlineHelpText>Enter the desired value(s) to define the sequence of mappings.</inlineHelpText>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Orig_Obj_Field__c</fullName>
        <description>This field is required and is manually populated. This text field is used to specify the field on the originating object in which the data will be mapped from during the conversion process.</description>
        <label>Originating Obj Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Orig_Obj__c</fullName>
        <description>This field is required and is manually populated. This text field is used to specify the object in which the data will be mapped from during the conversion process.</description>
        <label>Originating Obj</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Relationship_Type__c</fullName>
        <description>This field is required and is manually populated. It is used during conversion processes to specify the type of relationship the field map should be respected for.</description>
        <label>Relationship Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Company</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>Sole Proprietorship</fullName>
                </value>
                <value>
                    <fullName>Trust</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Source_Feature__c</fullName>
        <description>Administrators manually populate this optional field to indicate the feature associated with the data mapping (for example, HMDA2018). The key must match the documented key for the feature. By default, this field is blank.</description>
        <label>Source Feature</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Source_Formula__c</fullName>
        <description>Administrators manually populate this optional field with a formula. The system evaluates the formula to determine the value to map. By default, this field is blank.</description>
        <label>Source Formula</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Target_Obj_Field__c</fullName>
        <description>This field is required and is manually populated. This text field is used to specify the field on the target object in which the data from the originating object/field will be mapped to during the conversion process.</description>
        <label>Target Obj Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Target_Obj__c</fullName>
        <description>This field is required and is manually populated. This text field is used to specify the object in which the data from the originating object/field will be mapped to during the conversion process.</description>
        <label>Target Obj</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Field Map</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>LLC_BI__Orig_Obj__c</columns>
        <columns>LLC_BI__Orig_Obj_Field__c</columns>
        <columns>LLC_BI__Target_Obj__c</columns>
        <columns>LLC_BI__Target_Obj_Field__c</columns>
        <columns>LLC_BI__Relationship_Type__c</columns>
        <columns>LLC_BI__lookupKey__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Field Map Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>